format files in batches with idea